footer alignment and hamburger size fixes

--- a/app/src/templatecontrols/topnav/topnav.tc.less
+++ b/app/src/templatecontrols/topnav/topnav.tc.less
@@ -83,9 +83,10 @@ a:visited {
 
 .mobile-wrap .right-nav {
     position: relative;
-    padding-left: 1.75em;
+    // padding-left: 1.75em;
     font-size: 2em;
     top: 0.6em;
+    right: 1.6em;
    }
 .mobile-wrap .right-nav:before {       
         content: "";
@@ -97,7 +98,7 @@ a:visited {
         border-bottom: 0.125em solid #2f88b2;
      }
 
-@media only screen and (max-width: 707px) {
+@media only screen and (max-width: 728px) {
             .topnav-container {
                 height: 3.5em;
                 background-color: #fffffe;
@@ -171,5 +172,5 @@ a:visited {
             }
             .plat-modal {
                 opacity: 0.95;
-                overflow-y: scroll;
+                overflow-y: scroll;              
             }
